# grid-simulator

./: Dockerfile  README.md  calculate_waste.py  clients.py  convert_mode.py  environment.yml  go.mod  go.sum  main.go  main.py  meters.py  pickle2json.py  plot_run.py  pyproject.toml  requirements.txt  server.py  server_datagen_dump.py  server_dump.py  server_flask.py  server_flask_new.py  sim.py  single_meter.py  start_all.py  test_choose_best_offer.py  test_new_gen.py  test_predict.py  test_predict_server.py  ui.py  web_ui_server.py
data/: gen.txt  timeseries.csv
models/: duration-weights.csv  duration.h5  duration.json  durationBestModel.keras  grid-loss-weights.csv  grid-loss.h5  grid-loss.json  grid-loss.keras
proto/: simulator.proto
sim_test/: main.py  output.txt
sim_test/sim_meter/: main.py
simulator/: analytics.go  generator.go  optimizer.go  simulator.go  trader.go
src/: config.py  types.py
src/analytics/: __init__.py
src/core/: comms.py  data_generator.py  meter.py  msg_types.py  trade_handler.py  types.py  util.py
src/core/data_service/: blockchain.py  dht.py
src/core/data_services/: blockchain.py
src/core/optimizer/: __init__.py
src/core/transaction_quality/: dataset_preparation.py  main.py  models.py  scoring.py
src/core/util/: __init__.py  comms.py  (+4 more)
src/gui/: KeyValueList.py  MainWindow.py  Meter.py  MetersGrid.py  ResizingCanvas.py  __init__.py
src/presets/: __init__.py
src/server/: __init__.py  sim.py
src/simulators/: datagen.py  persistent.py  synchronous.py
src/util/: dumper.py
test/: test_dht.py  test_trade_handler.py
(+1 files in other folders)
