[tool.poetry]
name = "grid-simulator"
version = "0.1.0"
description = ""
authors = ["belsabbagh <belsabbagh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.16.1"
numpy = "^1.26"
pandas = "^2.2.2"
pvlib = "^0.10.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
