[project]
name = "grid-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "matplotlib>=3.10.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "pvlib>=0.11.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.0",
]
